--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 
     <section id="footer_items">
         <div class="address">
-            <span>Website: Joshimsblog.com</span> <br>
+            <span>Website: joshimuddin01.github.io/JoshimsBlog</span> <br>
             <span>Address: Jhenaidah Sadar Jhenaidah</span><br>
             <span>Owner: Joshim Uddin</span> <br>
             <span>Joshim's Blog 2020-2022 All right reseved</span>
